# zffacquire

./: Cargo.toml  README.md  snapcraft.yaml
.cargo/: config.toml
.github/: publish_binaries.yml
.github/workflows/: build_test.yml  publish_binaries.yml
snap/: snapcraft.yaml
snap/local/: constants_snap_hostfs_prefix.patch
