[package]
name = "zffacquire"
authors = ["ph0llux <ph0llux@pm.me>"]
version = "2.0.0-rc.3"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
description = "A command line utility for acquiring data into the forensic format Zff."
readme = "README.md"
homepage = "https://zff.dev"
repository = "https://github.com/zff-team/zffacquire"
keywords = ["forensics", "security", "acquisition", "file-format", "file"]
categories = ["command-line-utilities"]
publish = true

[[bin]]
name = "zffacquire"
path = "src/bin/main.rs"
test = true
bench = true

[dependencies]
base64 = "0.22"
clap = { version = "4.5.57", features = [ "derive" ] }
ed25519-dalek = { version = "2.0.0", features = [ "rand_core", "digest" ] }
env_logger = "0.11.8"
indicatif = "0.18.3"
indicatif-log-bridge = "0.2.3"
log = "0.4.29"
libc = { version = "0.2.180", default-features = false }
rand = "0.9.2"
rpassword = "7.4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
phollpers ={ version = "0.1.0" , features = ["compression"]}
zff = { path="../zff", features = [ "log" ] }

# platform specific dependencies
[target.'cfg(target_family = "windows")'.dependencies]
comfy-table = "7.2.2"
windows-drives = "0.5.0"
winapi = { version = "0.3.9", features = ["handleapi", "fileapi", "winerror", "minwindef", "ioapiset", "winioctl", "winbase", "winnt"] }

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13.1", default-features = false }
udev = "0.9.3"
emd-ebpf = { version = "1.0.7"}
emd-common = { version = "0.5.0", features = ["std"]}
procfs = { version = "0.18" }

[profile.release]
lto = true              # enables link time optimization
panic = 'unwind'        # unwinds the stack if panic
strip = "symbols"		# ... to reduce binary size ...
debug = false           # I won't see any debug options in release mode.
opt-level = 2           # optimized for speed.
codegen-units = 1       # Set to 1 to allow for maximum size reduction optimizations - at the expense of the compile time.
